--- a/src/main/resources/templates/menu/insert.html
+++ b/src/main/resources/templates/menu/insert.html
@@ -12,11 +12,10 @@
     <button id="submit">등록</button>
 </body>
 <script>
-    let file = new Array;
+    let file = null;
     document.querySelector("#file")
         .addEventListener("change", (e)=>{
-        file.push(e.target.files[0]);
-        console.log(file);
+            file = e.target.files[0];
     });
 
     document.querySelector("#submit")
@@ -28,7 +27,7 @@
 
             $.ajax({
                 type: 'post',
-                url: '/menu/addNew',
+                url: '/menuApi/addNew',
                 data: form,
                 enctype: 'multipart/form-data',
                 processData:false,
@@ -38,7 +37,7 @@
                     console.log("ok");
                 },
                 error(e){
-                    console.error(e.message);
+                    console.error(e);
                 }
             })
 
