--- a/src/main/resources/templates/menu/insert.html
+++ b/src/main/resources/templates/menu/insert.html
@@ -2,13 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>메뉴등록</title>
 </head>
 <body>
-    메뉴입력화면
-    <input type="text" id="menuName">
-    <input type="number" id="price">
-    <input type="file" id="file">
+    <h1>메뉴입력</h1>
+    <p/>
+    메뉴명 : <input type="text" id="menuName">
+    <p/>
+    가격 : <input type="number" id="price">
+    <p/>
+    이미지 : <input type="file" id="file">
+    <p/>
     <button id="submit">등록</button>
 </body>
 <script>
